--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-   "build": "webpack"
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@webpack-cli/generators": "^3.0.7",
+    "babel-loader": "^9.1.3",
     "html-webpack-plugin": "^5.6.0",
     "webpack": "^5.90.0",
+    "webpack-bundle-analyzer": "^4.10.1",
     "webpack-cli": "^5.1.4"
   }
 }
