--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.8.0",
     "style-loader": "^3.3.4",
     "webpack": "^5.90.0",
     "webpack-bundle-analyzer": "^4.10.1",
